<resources>
    <string name="app_name">smartbuy</string>

    <string name="category_title">Category</string>
    <string name="purchase_title">Purchase</string>

    <string name="product_detail_title">Product detail</string>
    <string name="category_detail_title">Category detail</string>
    <string name="edit_purchase_title">Edit Purchase</string>
    <string name="view_purchase_title">View Purchase</string>

    <string name="empty_products">List products are empty</string>
    <string name="empty_categories">List categories are empty</string>
    <string name="empty_purchases">List purchases are empty</string>

    <string name="category_name">Simple category</string>
    <string name="purchase_name">Simple purchase</string>

    <string name="sort_title">Sort</string>
    <string name="delete_title">Delete</string>
    <string name="edit_title">Edit</string>
    <string name="add_title">Add</string>
    <string name="search_hint">Search …</string>

    <string name="name_hint">Name</string>
    <string name="price_hint">Price</string>
    <string name="description_hint">Description</string>
    <string name="date_hint">hh/MM/yyyy</string>

    <string name="name_value_error">"Name must contain only characters and numbers"</string>
    <string name="date_value_error">"Date must contain only numbers and dots"</string>
</resources>
