<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/navigation_purchase"
    app:startDestination="@id/view_pager_fragment">


    <fragment
        android:id="@+id/view_pager_fragment"
        android:name="org.kl.smartbuy.ui.tabs.TabPagerFragment">
        <action
            android:id="@+id/action_tab_pager_fragment_to_edit_purchase_activity"
            app:destination="@id/edit_purchase_activity" />

        <action
            android:id="@+id/action_tab_pager_fragment_to_category_detail_fragment"
            app:destination="@id/category_detail_fragment">
        </action>

    </fragment>

    <activity
        android:id="@+id/edit_purchase_activity"
        android:name="org.kl.smartbuy.ui.purchase.EditPurchaseActivity"
        android:label="@string/edit_purchase_title">

        <argument
            android:name="purchaseId"
            app:argType="long"
            android:defaultValue="0L"/>
    </activity>

    <fragment
        android:id="@+id/category_detail_fragment"
        android:name="org.kl.smartbuy.ui.category.CategoryDetailFragment"
        android:label="@string/category_detail_title">
        <argument
            android:name="categoryId"
            android:defaultValue="0L"
            app:argType="long" />

        <action
            android:id="@+id/action_category_detail_fragment_to_product_detail_fragment"
            app:destination="@id/product_detail_fragment">
        </action>
    </fragment>

    <fragment
        android:id="@+id/product_detail_fragment"
        android:name="org.kl.smartbuy.ui.product.ProductDetailFragment"
        android:label="@string/product_detail_title">

        <argument
            android:name="productId"
            android:defaultValue="0L"
            app:argType="long" />
    </fragment>
</navigation>