<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="org.kl.smartbuy.model.Purchase" />
        <variable
            name="viewModel"
            type="org.kl.smartbuy.viewmodel.PurchaseDetailViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        tools:context=".view.EditPurchaseActivity">

        <ImageView
            android:id="@+id/item_purchase_image"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_weight="2"
            android:layout_gravity="center"

            android:src="@drawable/purchase_icon"
            android:contentDescription="@string/purchase_name" />

        <EditText
            android:id="@+id/name_purchase_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="0.5"

            android:hint="@string/name_hint"
            android:inputType="text"
            android:text="@{viewModel.purchase.name}"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/date_purchase_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="0.5"

            android:drawableEnd="@android:drawable/ic_menu_today"
            android:drawablePadding="5dp"
            android:ems="15"
            android:hint="@string/date_hint"
            android:importantForAutofill="no"
            android:focusable="false"
            android:editable="false"

            android:inputType="datetime"
            android:text="@{viewModel.purchase.date}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <Button
                android:id="@+id/edit_purchase_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="8dp"

                android:text="@string/edit_title"
                app:backgroundTint="@color/primary_color"
                android:textColor="@android:color/white"

                app:tint="@color/accent_color" />
        </LinearLayout>

    </LinearLayout>

</layout>